collects/tests/typed-scheme/fail/with-asserts3.rkt
#;
(exn-pred exn:fail?)
#lang typed/racket

(let ([x #f])
  (with-asserts ([x])
                x))
